# CallCentre

./: .gitignore  CMakeLists.txt  README.md  StressTest.py
cmake/: FindBoost.cmake  Findgoogletest.cmake  Findnlohmann_json.cmake
config/: config.json  log.txt
cpp/: CDRwriter.cpp  CDRwriter.h  CMakeLists.txt  CallOperator.cpp  CallOperator.h  RequestQueue.cpp  RequestQueue.h  Server.cpp  Server.h  main.cpp  servUtils.cpp  servUtils.h
test/: CMakeLists.txt  test_all.cpp
